# trans-gemma

./: .env.example  .gitignore  BLOG-OUTLINE.md  CLEANUP-SUMMARY.md  LICENSE  NOTEBOOK-CLEANUP-GUIDE.md  NOTEBOOK-GUIDE.md  QUICKSTART.md  README.md  TEST-REPORT-GCP-T4.md  TRANSLATION_EXTRACTION_FIX.md  TRANSLATION_QUALITY_FIX.md  TRANSLATION_QUALITY_REPORT_V2.md  arxiv-reader-colab.ipynb  arxiv-reader.ipynb  blog-post-arxiv-reader.md  blog-post-bilingual-reader.md  blog-post-zh-tw.md  debug_translation.py  document-translator-colab.ipynb  pyproject.toml  run-examples.sh  test_full_pdf.py  test_ollama_vs_hf.py  translate_full_with_html.py  translategemma-colab.ipynb  translategemma_colab.ipynb
.github/workflows/: deploy-cloudrun.yml
cloudrun/: Dockerfile  deploy.sh  main.py  requirements.txt
docs/: colab-vscode-setup.md  deployment-guide.md  huggingface-access.md
examples/: README.md  local-test.py  simple-translation.py  translate.py  translategemma-fix.py  translation_api.py  verify-hf-token.py
examples/backends/: __init__.py  base.py  better_extraction.py  mlx_backend.py  ollama_backend.py  transformers_backend.py  transformers_multimodal_backend.py
scripts/gcp/: README.md  setup_colab_runtime.sh  setup_gcp_t4_auto_shutdown.sh  setup_gcp_t4_auto_shutdown_fixed.sh  setup_gcp_t4_colab.sh  setup_t4_simple.sh
